[package]
name = "umi-tools-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
indexmap = "2.12.1"
rand = "0.8.5"
regex = "1.12.2"
rust-htslib = { version = "1.0.0", default-features = false, features = ["libdeflate"] }
tempfile = "3.23.0"
